
PROJECT(cgm_examples)

IF(NOT CUBIT_SOURCE_BASE)
  SET(CUBIT_SOURCE_BASE ${cgm_examples_SOURCE_DIR}/../.. CACHE PATH
    "Root directory of CUBIT source tree.")
ENDIF(NOT CUBIT_SOURCE_BASE)

IF(NOT CUBIT_LIB_BASE)
  SET(CUBIT_LIB_BASE ${CUBIT_SOURCE_BASE}/lib CACHE PATH
    "Root directory for CUBIT libs.")
ENDIF(NOT CUBIT_LIB_BASE)

IF(NOT CUBIT_BUILD_BASE)
  SET(CUBIT_BUILD_BASE ${CUBIT_SOURCE_BASE} CACHE PATH
    "Root directory for CUBIT build including genated header files.")
ENDIF(NOT CUBIT_BUILD_BASE)

INCLUDE(${CUBIT_SOURCE_BASE}/geom/ACIS/UseACIS.cmake)
INCLUDE(${CUBIT_SOURCE_BASE}/UseCubitRoot.cmake)
INCLUDE(${CUBIT_SOURCE_BASE}/util/UseUtil.cmake)

IF(CMAKE_SYSTEM MATCHES "HP-UX")
SET(CMAKE_CXX_COMPILER aCC CACHE STRING "C++ compiler" FORCE)
SET(CMAKE_C_COMPILER cc CACHE STRING "C++ compiler" FORCE)
ENDIF(CMAKE_SYSTEM MATCHES "HP-UX")

IF(CMAKE_SYSTEM_NAME MATCHES "SunOS")
SET(CMAKE_CXX_COMPILER CC CACHE STRING "C++ compiler" FORCE)
SET(CMAKE_C_COMPILER cc CACHE STRING "C++ compiler" FORCE)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "SunOS")

# an option to build 64 bit on the SGI
IF(CMAKE_SYSTEM_NAME MATCHES "IRIX")
  OPTION(BUILD_64 "Build 64 bit objects" OFF)
  IF(BUILD_64)
    IF(NOT ${CMAKE_CXX_FLAGS} MATCHES "64")
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -64" 
                      CACHE STRING "Flags used by the compiler during all build types." FORCE)
    ENDIF(NOT ${CMAKE_CXX_FLAGS} MATCHES "64")
  ENDIF(BUILD_64)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "IRIX")

IF(UNIX)
  SET(CUBITROOT $ENV{CUBIT})
ELSE(UNIX)
  SET(CUBITROOT $ENV{CUBITROOT})
ENDIF(UNIX)

IF(WIN32)
  SET(CMAKE_DEBUG_POSTFIX "_d")
ENDIF(WIN32)

SUBDIRS(driverc++ facetdriver exoIIfacet gomadrive)
